--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unize",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@ericblade/quagga2": "0.0.18",
@@ -22,9 +22,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -38,6 +35,15 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.13.1"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.0.5"
   }
 }
